--- a/angular.json
+++ b/angular.json
@@ -129,6 +129,10 @@
               "devServerTarget": "webgl-v0:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
